--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
                 This website will serve as documentation during my internship with <a target="_blank" href="https://www.theurbanwild.us/about">The Urban Wild</a>.
                 My focus for this project will be around creating virtual worlds as a means of an exploration of what is capable 
                 with agrictulral technology.<br>
-                We have developed three concepts for our augmented reality scenes.  
-                <dl>
+
+
+
+<h3>We have developed three concepts for our augmented reality scenes </h3><dl>
                     <dt> <strong> A Yielding Hydroponic System </strong> </dt>
                     <dd>we have envision of producing a virtual scenario where the user will be able to sow seeds into a selected hydropnic system.
 A user interaction will toggle the system to begin growing, showing a timelapse duration of a crop from seed to harvest. <br>
@@ -45,7 +47,7 @@ A user interaction will toggle the system to begin growing, showing a timelapse 
     <img src="img/hydroponic-timelapse.png" alt=""> 
 
     <figcaption>
-                        *SCREENSHOT*SERGIO፧GARCIA 
+                        [SCREENSHOT] AR*FILTER*CREATED*BY*SERGIO፧GARCIA 
     </figcaption>
 </figure>                                    
                     </dd>
