--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Lastly the experience will display a bowl of your harvest.
 </figure>                                    
                     </dd>
                     <dt><strong> 360 3D TOUR OF A NEIGHBORS FARM </strong> </dt>
-                    <dd> This concept the end user will have the oppurtunity to take a tour of a farm that implements agrictultural technology. 
+                    <dd>This concept the end user will have the oppurtunity to take a tour of a farm that implements agrictultural technology. 
 A 3D rendering of the farm is needed – using 360 degree spherical rendering using a 3D video camera. 
 Later in post processing the rendering will be used to create a virtual bridge to the onsite farm. 
 
@@ -70,9 +70,9 @@ This will be rendered into a guided tour.<br>
                     </dd>
                     <dt><strong> GUIDED VIDEO FUTURE SCENARIO</strong> </dt>
                     <dd> <de>The third concept is dystopic rendering of a possible future; where we stay stagnant with our efforts of climate change.</de>
-                      I want to rework this idea from avoiding dystopia, and pehaps painting a utopia will be better serving as a means of hope. 
-                      As a solarpunk this is a main feauture of the school of thought. Which is to act upon the future we hope to see, now! Delivered 
-                      in a fashion of hope rather than doom. 
+I want to rework this idea from avoiding dystopia, and pehaps painting a utopia will be better serving as a means of hope. 
+As a solarpunk this is a main feauture of the school of thought. Which is to act upon the future we hope to see, now! 
+Delivered in a fashion of hope rather than doom. 
                   
                       <br>
 
@@ -111,31 +111,22 @@ This will be rendered into a guided tour.<br>
                     <br>
 Getting started I had to draw out what the roadmap of what it would like to execute the concepts mentioned previously.
 
-
 For the first concept with AR scene of a hydroponic system yielding crops, I needed some sort of model to place in the scene. 
-
 While searching for 3D objects to be used; many of the models were either inadequate, or not free.
 
 Pondering I concluded that picking up the skills of learning Blender would utimitetly be beneficial; 
-There are countless uses for the program - from 3D modeling - animation 
-- AR - 3D Printing - animation ... and the list goes on. 
-
+There are countless uses for the program. 
 Blender is a <a href="https://en.wikipedia.org/wiki/Gratis_versus_libre" target="_blank">free libre</a> open source software. 
 
-I found that using open source as a medium to convey these ideas was appropriate  because 
+I found that using open source as a medium to convey these ideas was appropriate because 
+both gardening and open-source share the common integral philosophies that allow people to build for their communities as a technological discipline
+that reclaims power back to the people. 
 
-I find free libre software and urban gardening to have a lot in common as a means of building 
-for community, and as a technological discipline that can harbor skills that reclaim power back to the individual. 
+Gardening is a radical act that allows for people to have soveignetiy over their food. Where as FOSS allows communities to create
+tooling for one and other. 
 
-I think of gardening as a radical act for 
-fighting for the rights of people to have soveignetiy of their food.
 
-In the same way open software is standing for the soveignerty of knowledge within technology. 
-
-I have to admit I was always discouraged by the intimidating interface, but lets dive in head first.  
-
-I really enjoyed this <a href="https://www.youtube.com/watch?v=QlErCEe9A8o">tutorial</a>[Beginner Friendly], after spending some time I felt more comfortable,
-and knowledgable of some of the basic tooling in blend. 
+This <a href="https://www.youtube.com/watch?v=QlErCEe9A8o">tutorial</a> was helpful for getting familiar with the eco-system.
 </pre>
     <figure>
     <img src="img/learning-blender.png" alt="my first model">
@@ -201,7 +192,7 @@ and knowledgable of some of the basic tooling in blend.
     <td>Toggles through x + y axis with direction of mouse</td>
     </tr>
     <tr>
-    <td>SHIFT A/td>
+    <td>SHIFT A</td>
     <td>Adds new mesh</td>
     </tr>
     <tr>
@@ -218,7 +209,8 @@ and knowledgable of some of the basic tooling in blend.
                <h1>MODELING_HYDROPONICS</h1>
     <figure>
       <img src="img/seedling.png" alt="SEEDLING MADE IN BLENDER">
-      <img src="img/seedlingCloseUp.png" alt="SEEDLING MADE IN BLENDER">
+      <!-- <img src="img/seedlingCloseUp.png" alt="SEEDLING MADE IN BLENDER"> -->
+      <img src="img/grow-tower.png" alt="SEEDLING MADE IN BLENDER">
   
       <figcaption>
                           [SCREENSHOT] BLENDER*LOW*POLY*HYDROPONIC*GROWING*CUPS
