--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ This <a href="https://www.youtube.com/watch?v=QlErCEe9A8o">tutorial</a> was help
     <td>Toggles through x + y axis with direction of mouse</td>
     </tr>
     <tr>
-    <td>SHIFT A</td>
+    <td>SHIFT A</tr>/td>
     <td>Adds new mesh</td>
     </tr>
     <tr>
