pushed to github pages

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@ This will be rendered into a guided tour.<br>
                     </dd>
                     </dd>
                     <dt><strong> GUIDED VIDEO FUTURE SCENARIO</strong> </dt>
-                    <dd> <de>The third concept is dystopic rendering of a possible future; where we stay stagnant with our efforts of climate change.</de>
+                    <dd><del>The third concept is dystopic rendering of a possible future; where we stay stagnant with our efforts of climate change.</del>
+
 I want to rework this idea from avoiding dystopia, and pehaps painting a utopia will be better serving as a means of hope. 
 As a solarpunk this is a main feauture of the school of thought. Which is to act upon the future we hope to see, now! 
 Delivered in a fashion of hope rather than doom. 
@@ -152,11 +153,11 @@ This <a href="https://www.youtube.com/watch?v=QlErCEe9A8o">tutorial</a> was help
               <div class="content">
                 <pre><time> ❃ DECEMBER 9th 2021</time>
                     <br>
-                My experience with developing AR was first introduced by the <a href="https://sfpc.io/">SFPC</a>, 
-                where they taught a summer <a href="http://sfpc.io/cocoon/programs/#augmented-reality">workshop</a> exploring augmented reality as an artistic, and technological displine. 
+                
                 <div id="hotkey-title"> 
 <h3>BLENDER HOT KEYS</h3>
-                </div><table class="GeneratedTable">
+                </div>
+                <table class="GeneratedTable">
 
 
                  
@@ -192,7 +193,7 @@ This <a href="https://www.youtube.com/watch?v=QlErCEe9A8o">tutorial</a> was help
     <td>Toggles through x + y axis with direction of mouse</td>
     </tr>
     <tr>
-    <td>SHIFT A</tr>/td>
+    <td>SHIFT A</tr></td>
     <td>Adds new mesh</td>
     </tr>
     <tr>
