--- a/index.html
+++ b/index.html
@@ -130,11 +130,10 @@ Delivered in a fashion of hope rather than doom.
           </td>
         </tr>
         <tr>
-    
+    /* testing */
       </tbody></table>
       
     </ul>
-//test
 
   </body>
 </html>
